# stylemind

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  ISSUES.txt  Makefile  README.md  design.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: enrichment.py  products_seed.csv
docs/: demo_script.md  gap_analysis.md  planning_future_improvements.md  requirements.md
scripts/: embed.py  seed.py
src/stylemind/: __main__.py  config.py  main.py  observability.py
src/stylemind/api/: __init__.py  chat.py  health.py  outfit.py  persona.py  products.py
src/stylemind/cli/: __init__.py  chat.py
src/stylemind/graph/: __init__.py  client.py  queries.py
src/stylemind/models/: __init__.py  domain.py  enums.py  schemas.py
src/stylemind/outfit/: __init__.py  builder.py
src/stylemind/persona/: __init__.py  inference.py  manager.py
src/stylemind/rag/: __init__.py  embedder.py  generator.py  reranker.py  retriever.py
src/stylemind/ui/: __init__.py  app.py  components.py  sse_client.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_csv_parser.py  test_embedder.py  test_enrichment.py  test_generator.py  test_models.py  test_neo4j_client.py  test_observability.py  test_outfit_builder.py  test_performance.py  test_persona.py  test_persona_inference.py  test_persona_manager.py  test_reranker_material_penalty.py  test_retriever.py  test_seed.py
