[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stylemind"
version = "0.1.0"
description = "RAG-powered fashion styling assistant with Neo4j knowledge graph"
requires-python = ">=3.14"
dependencies = [
    "neo4j>=5.20",
    "neo4j-graphrag[sentence-transformers]>=1.5,<2.0",
    "sentence-transformers>=3.0",
    "openai>=1.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "langfuse>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
    "pip-audit>=2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stylemind"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM108", "UP006", "UP035", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["stylemind"]

[tool.pyright]
include = ["src"]
exclude = ["tests", "scripts"]
typeCheckingMode = "basic"
pythonVersion = "3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast isolated tests",
    "integration: requires running Neo4j instance",
    "e2e: full end-to-end tests",
    "performance: timing benchmarks",
]
testpaths = ["tests"]
